fixed: text overlap issue for lesson list (#364)
* fixed: text overlap issue for lesson list

* made login error responsive

--- a/src/styles/Preview.module.scss
+++ b/src/styles/Preview.module.scss
@@ -76,6 +76,9 @@
     padding: 20px;
     .chapter_list {
       width: calc(100vw - 40px);
+      .resContainer {
+        height: unset;
+      }
     }
 
     .course__info {
